--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "antd": "^5.6.3",
     "i18next": "^23.2.8",
     "react": "^18.2.0",
