--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^5.3.4",
+    "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
